inicio da aplicação

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
   "plugins": ["@typescript-eslint"],
   "rules": {
     "arrow-parens": [2, "always"],
-    "quotes": [2, "single"]
+    "quotes": [2, "single"],
+    "import/prefer-default-export": "off"
   }
 }
