--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "newsletter",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/app.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/server.ts",
+    "dev": "tsnd src/server.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
+    "eslint-config-airbnb": "^19.0.4",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "mysql2": "^3.2.0",
@@ -17,13 +21,14 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/jasmine": "^4.3.1",
+    "@types/node": "16.11",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "eslint": "^8.36.0",
     "nodemon": "^2.0.22",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.2"
+    "ts-node-dev": "1.1",
+    "typescript": "4.4"
   }
 }
