--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,6 @@ services:
     image: mysql:8
     environment:
       - MYSQL_ROOT_PASSWORD=123456
+      - MYSQL_DATABASE=news_letter
     ports:
       - 3306:3306
