--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "@prisma/client": "^4.11.0",
     "dotenv": "^16.0.3",
-    "eslint-config-airbnb": "^19.0.4",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "mysql2": "^3.2.0",
@@ -26,6 +25,12 @@
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "eslint": "^8.36.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "nodemon": "^2.0.22",
     "prisma": "^4.11.0",
     "ts-loader": "^9.4.2",
