--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
     "arrow-parens": [2, "always"],
     "quotes": [2, "single"],
     "import/prefer-default-export": "off",
+    "no-unused-vars": "off",
     "import/no-unresolved": "error",
     "import/extensions": [
       "error",
