--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server.ts",
-    "dev": "tsnd src/server.ts"
+    "dev": "nodemon --watch \"./src/**\" ./src/server.ts"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "joi": "^17.9.1",
     "mysql2": "^3.2.0",
     "tsc-init": "^2.1.0"
   },
@@ -34,8 +35,6 @@
     "nodemon": "^2.0.22",
     "prisma": "^4.11.0",
     "ts-loader": "^9.4.2",
-    "ts-node": "^10.9.1",
-    "ts-node-dev": "1.1",
     "typescript": "4.4"
   }
 }
