build: :art: add script pra iniciar o docker-compose

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/server.ts",
-    "dev": "nodemon --watch \"./src/**\" ./src/server.ts"
+    "start": "nodemon --watch \"./src/**\" ./src/server.ts",
+    "db:up": "docker-compose up --build -d"
   },
   "author": "",
   "license": "ISC",
