test: :sparkles: add setub dos testes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,13 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "airbnb"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:import/errors",
+    "plugin:import/warnings",
+    "plugin:import/typescript",
+    "airbnb"],
   "overrides": [],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -16,7 +22,10 @@
     "quotes": [2, "single"],
     "import/prefer-default-export": "off",
     "no-unused-vars": "off",
-    "import/no-unresolved": "error",
+    "import/no-unresolved": [
+      2, 
+      { "caseSensitive": false }
+   ],
     "no-restricted-syntax": ["error", "ForInStatement", "LabeledStatement", "WithStatement"],
     "import/extensions": [
       "error",
@@ -35,25 +44,13 @@
     },
     "import/resolver": {
       "typescript": {
-        "alwaysTryTypes": true, // always try to resolve types under `<root>@types` directory even it doesn't contain any source code, like `@types/unist`
-
-        // Choose from one of the "project" configs below or omit to use <root>/tsconfig.json by default
-
-        // use <root>/path/to/folder/tsconfig.json
+        "alwaysTryTypes": true,
         "project": "path/to/folder",
-
-        // Multiple tsconfigs (Useful for monorepos)
-
-        // use a glob pattern
         "project": "packages/*/tsconfig.json",
-
-        // use an array
         "project": [
           "packages/module-a/tsconfig.json",
           "packages/module-b/tsconfig.json"
         ],
-
-        // use an array of glob patterns
         "project": [
           "packages/*/tsconfig.json",
           "other-packages/*/tsconfig.json"
