--- a/package.json
+++ b/package.json
@@ -7,27 +7,39 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --require ts-node/register 'src/**/*.spec.ts'",
     "start": "nodemon --watch \"./src/**\" ./src/server.ts",
-    "db:up": "docker-compose up --build -d"
+    "db:up": "docker-compose up --build -d",
+    "db_test:up": "docker-compose -f docker-compose.test.yml up",
+    "db_test:down": "docker-compose -f docker-compose.test.yml down",
+    "integration:test":"DATABASE_URL=mysql://root:123456@localhost:3307/news_letter npx prisma migrate dev && DATABASE_URL=mysql://root:123456@localhost:3307/news_letter npm test"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.11.0",
+    "@types/mocha": "^10.0.1",
+    "chai": "^4.3.7",
+    "chai-http": "^4.3.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "joi": "^17.9.1",
+    "mocha": "^10.2.0",
     "mysql2": "^3.2.0",
+    "sinon": "^15.0.3",
     "tsc-init": "^2.1.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.4",
+    "@types/chai-http": "^4.2.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "^4.3.1",
     "@types/node": "16.11",
+    "@types/sinon": "^10.0.13",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
+    "chai": "^4.3.7",
     "eslint": "^8.36.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-import-resolver-typescript": "^3.5.3",
@@ -35,8 +47,10 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest-mock-extended": "^3.0.4",
     "nodemon": "^2.0.22",
     "prisma": "^4.11.0",
+    "ts-jest": "^29.0.5",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "typescript": "4.4"
